plugins {
    id 'java'
    id 'java-library'
    id 'jacoco'
}

group 'com.github.hmcts'
version 'DEV-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    mavenLocal()
    maven { url 'https://jitpack.io' }
    maven {
        url 'https://repo.spring.io/libs-milestone'
    }
    jcenter()
}

task highLevelDataSetup(type: JavaExec) {
    main = "uk.gov.hmcts.reform.prl.HighLevelDataSetupApp"
    classpath += sourceSets.main.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

dependencies {
    implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.6'

    testCompile group: 'junit', name: 'junit', version: 4.12
    testCompile 'pl.pragmatists:JUnitParams:1.1.1'
}